--- a/MaintenanceDashboard.Client/Views/HistorySpendedPaddle.xaml
+++ b/MaintenanceDashboard.Client/Views/HistorySpendedPaddle.xaml
@@ -30,8 +30,8 @@
                           AutoGenerateColumns="False" IsReadOnly="True" Height="500" Width="840" FontSize="11">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Numer" Binding="{Binding Paddle.BarcodeNumber}"/>
-                        <DataGridTextColumn Header="Data przyjecia" Binding="{Binding ReceivedDate}" />
-                        <DataGridTextColumn Header="Data naprawy" Binding="{Binding RepairDate}"/>
+                        <DataGridTextColumn Header="Data przyjecia" Binding="{Binding ReceivedDate, StringFormat=yyyy/MM/dd}" />
+                        <DataGridTextColumn Header="Data naprawy" Binding="{Binding RepairDate, StringFormat=yyyy/MM/dd}"/>
                         <DataGridTextColumn Header="Akcja" Binding="{Binding ActivityPerformed}" />
                         <DataGridTextColumn Header="Przyjmujący pracownik" Binding="{Binding ReceivingEmployee}"/>
                         <DataGridTextColumn Header="Wydający pracownik" Binding="{Binding SpendingEmployee}"/>
