--- a/MaintenanceDashboard.Client/Views/ReceivePaddleControl.xaml
+++ b/MaintenanceDashboard.Client/Views/ReceivePaddleControl.xaml
@@ -10,6 +10,11 @@
              d:DataContext="{d:DesignInstance viewModels:ReceivedPaddleViewModel}" >
     <Grid>
         <ContentControl Style="{StaticResource RectangleView}"/>
+        <Button x:Name="btnRefreash" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"
+                            Background="{x:Null}" BorderBrush="{x:Null}" 
+                            Padding="0" Foreground="White" Click="btnRefreash_Click">
+            <materialDesign:PackIcon Kind="Refresh" Width="25" Height="25"/>
+        </Button>
 
         <ContentControl Style="{StaticResource AddingRecordGridTemplete}"/>
 
@@ -19,7 +24,7 @@
 
             <StackPanel HorizontalAlignment="Center"  VerticalAlignment="Center" Style="{StaticResource AddingRecordDataTemplete}">
 
-                <WrapPanel Grid.Column="0" Grid.Row="0">
+                <WrapPanel Margin="5">
                     <materialDesign:PackIcon Kind="User" VerticalAlignment="Center" Width="30" Height="30"/>
                     <ComboBox Width="220"  DataContext="{Binding EmployeeViewModel}" materialDesign:HintAssist.Hint="Przyjmujący pracownik" 
                            Margin="10" SelectedItem="{Binding SelectedEmployee}" ItemsSource="{Binding Path=Employees}" 
@@ -39,7 +44,7 @@
                     </ComboBox>
                 </WrapPanel>
 
-                <WrapPanel Grid.Row="1" Grid.Column="0">
+                <WrapPanel Margin="5">
                     <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
                     <TextBox  Width="220" materialDesign:HintAssist.Hint="Numer paletki" 
                               Text="{Binding BarcodeNumber, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
@@ -50,7 +55,7 @@
                             Grid.Row="4" Grid.Column="0"  Width="240" SelectedDate="{Binding ReceivedDate}" HorizontalAlignment="Center" SelectedDateFormat="Long"/>
 
 
-                <WrapPanel Grid.Column="0" Grid.Row="3">
+                <WrapPanel Margin="5">
                     <materialDesign:PackIcon Kind="LightningBoltOutline" VerticalAlignment="Center" Width="30" Height="30"/>
                     <ComboBox materialDesign:HintAssist.Hint="Akcja" MinWidth="72" Grid.Column="0" Grid.Row="3" 
                           Margin="10" Width="220" HorizontalAlignment="Left" SelectedValue="{Binding ActivityPerformed}" SelectedValuePath="Content"
@@ -61,11 +66,7 @@
                     </ComboBox>
                 </WrapPanel>
 
-
-                <DatePicker materialDesign:HintAssist.Hint="Data planowanej naprawy"   Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
-                            Grid.Row="4" Grid.Column="0"  Width="240" SelectedDate="{Binding PlannedRepairDate}" HorizontalAlignment="Center" SelectedDateFormat="Long"/>
-
-                <WrapPanel Grid.Row="6" Grid.Column="0">
+                <WrapPanel Margin="5">
                     <materialDesign:PackIcon Kind="NoteTextOutline" VerticalAlignment="Center" Width="30" Height="30"/>
                     <TextBox  Width="220" materialDesign:HintAssist.Hint="Opis interwencji" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
@@ -73,7 +74,7 @@
                 </WrapPanel>
 
                 <Button Height="25"  Background="#FF0069C0" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
-                             BorderBrush="#FF0069C0"  Width="110" Content="POTWIERDŹ" Margin="10" Command="{Binding ReceiveCommand}"/>
+                             BorderBrush="#FF0069C0"  Width="110" Content="POTWIERDŹ" Margin="5" Command="{Binding ReceiveCommand}"/>
 
             </StackPanel>
         </Grid>
