--- a/MaintenanceDashboard.Client/Views/ReceiveThermostatControl.xaml
+++ b/MaintenanceDashboard.Client/Views/ReceiveThermostatControl.xaml
@@ -12,6 +12,12 @@
     <Grid>
         <ContentControl Style="{StaticResource RectangleView}"/>
 
+        <Button x:Name="btnRefreash" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"
+                            Background="{x:Null}" BorderBrush="{x:Null}" 
+                            Padding="0" Foreground="White" Click="btnRefreash_Click">
+            <materialDesign:PackIcon Kind="Refresh" Width="25" Height="25"/>
+        </Button>
+
         <ContentControl Style="{StaticResource AddingRecordGridTemplete}"/>
 
         <Grid Margin="15,80,15, 15">
@@ -20,7 +26,7 @@
 
             <StackPanel HorizontalAlignment="Center"  VerticalAlignment="Center" Style="{StaticResource AddingRecordDataTemplete}">
 
-                <WrapPanel>
+                <WrapPanel Margin="5">
                     <materialDesign:PackIcon Kind="User" VerticalAlignment="Center" Width="30" Height="30"/>
                     <ComboBox  Width="220"  DataContext="{Binding EmployeeViewModel}" materialDesign:HintAssist.Hint="Przyjmujący pracownik" 
                            Margin="10" SelectedItem="{Binding SelectedEmployee}" ItemsSource="{Binding Path=Employees}" 
@@ -40,14 +46,14 @@
                     </ComboBox>
                 </WrapPanel>
 
-                <WrapPanel >
+                <WrapPanel Margin="5">
                     <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
                     <TextBox  Width="220" materialDesign:HintAssist.Hint="Numer termostatu" 
                               Text="{Binding BarcodeNumber, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                               Margin="10"/>
                 </WrapPanel>
 
-                <WrapPanel >
+                <WrapPanel Margin="5">
                     <materialDesign:PackIcon Kind="MapMarkerOutline" VerticalAlignment="Center" Width="30" Height="30"/>
                     <ComboBox materialDesign:HintAssist.Hint="Lokalizacja" MinWidth="220" 
                           Margin="10" SelectedValue="{Binding LastLocation}" SelectedValuePath="Content"
@@ -78,7 +84,7 @@
                               Width="240" SelectedDate="{Binding ReceivedDate}" HorizontalAlignment="Center" SelectedDateFormat="Long"/>
 
 
-                <WrapPanel>
+                <WrapPanel Margin="5">
                     <materialDesign:PackIcon Kind="LightningBoltOutline" VerticalAlignment="Center" Width="30" Height="30"/>
                     <ComboBox materialDesign:HintAssist.Hint="Akcja" MinWidth="72" Grid.Column="0" Grid.Row="3" 
                           Margin="10" Width="220" HorizontalAlignment="Left" SelectedValue="{Binding ActivityPerformed}" SelectedValuePath="Content"
@@ -91,14 +97,10 @@
                 </WrapPanel>
 
 
-                <DatePicker materialDesign:HintAssist.Hint="Data planowanej naprawy"   Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
-                            Width="240" SelectedDate="{Binding PlannedRepairDate}" HorizontalAlignment="Center" SelectedDateFormat="Long"/>
-
-
-                <WrapPanel>
+                <WrapPanel Margin="5">
                     <materialDesign:PackIcon Kind="NoteTextOutline" VerticalAlignment="Center" Width="30" Height="30"/>
                     <TextBox  Width="220" materialDesign:HintAssist.Hint="Opis interwencji" 
-                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="5"
                               Text="{Binding DescriptionIntervention}"/>
                 </WrapPanel>
 
