--- a/MaintenanceDashboard.Client/Views/SpendPaddle.xaml
+++ b/MaintenanceDashboard.Client/Views/SpendPaddle.xaml
@@ -10,6 +10,12 @@
     <Grid>
         <ContentControl Style="{StaticResource RectangleView}"/>
 
+        <Button x:Name="btnRefreash" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"
+                            Background="{x:Null}" BorderBrush="{x:Null}" 
+                            Padding="0" Foreground="White" Click="btnRefreash_Click">
+            <materialDesign:PackIcon Kind="Refresh" Width="25" Height="25"/>
+        </Button>
+
         <Grid  Margin="15,80,15, 15" Width="Auto" Height="Auto">
             <TextBlock Text="WYDANIE PALETKI" HorizontalAlignment="Center" VerticalAlignment="Top"  
                            FontSize="18"  Foreground="Gray" Margin="18"/>
@@ -57,7 +63,7 @@
                         <TextBox  Width="220" materialDesign:HintAssist.Hint="Data dodania" IsReadOnly="True" 
                                   ToolTip="W celu wypełnienia pola wybierz paletke z listy obok"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                              Text="{Binding SelectedReceivedPaddle.ReceivedDate}"
+                              Text="{Binding SelectedReceivedPaddle.ReceivedDate, StringFormat=yyyy/MM/dd}"
                               Margin="10"/>
                     </WrapPanel>
 
@@ -84,7 +90,7 @@
                         <materialDesign:PackIcon Kind="CalendarAdd" VerticalAlignment="Center" Width="30" Height="30"/>
                         <TextBox  Width="220" materialDesign:HintAssist.Hint="Data naprawy" IsReadOnly="True" 
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                              Text="{Binding RepairDate}"
+                              Text="{Binding RepairDate, StringFormat=yyyy/MM/dd}"
                               Margin="10"/>
                     </WrapPanel>
 
@@ -99,12 +105,11 @@
                     <TextBlock Text="Paletki na warsztacie" HorizontalAlignment="Center" VerticalAlignment="Top"
                            FontSize="16"  Foreground="Gray" />
 
-                    <DataGrid ItemsSource="{Binding ReceivedPaddles}" SelectedItem="{Binding SelectedReceivedPaddle}"  Margin="10,10,0,10" FontSize="11" 
-                          Grid.Column="1" Background="White" AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Left" Height="500" Width="580">
+                    <DataGrid ItemsSource="{Binding ReceivedPaddles}" SelectedItem="{Binding SelectedReceivedPaddle}"  FontSize="11" 
+                          Grid.Column="1" Background="White" AutoGenerateColumns="False" IsReadOnly="True" >
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Numer" Binding="{Binding Paddle.BarcodeNumber}"/>
-                            <DataGridTextColumn Header="Data dodania" Binding="{Binding ReceivedDate}"/>
-                            <DataGridTextColumn Header="Planowana naprawa" Binding="{Binding PlannedRepairDate}"/>
+                            <DataGridTextColumn Header="Data dodania" Binding="{Binding ReceivedDate, StringFormat=yyyy/MM/dd}"/>
                             <DataGridTextColumn Header="Akcja" Binding="{Binding ActivityPerformed}"/>
                             <DataGridTextColumn Header="Przyjmujący pracownik" Binding="{Binding ReceivingEmployee}"/>
                             <DataGridTextColumn Header="Opis interwencji" Binding="{Binding DescriptionIntervention}"/>
