--- a/MaintenanceDashboard.Client/Views/HistorySpendedPaddleControl.xaml
+++ b/MaintenanceDashboard.Client/Views/HistorySpendedPaddleControl.xaml
@@ -1,24 +1,24 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.HistoryRetrievedEquipment"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.HistorySpendedPaddleControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:RetrievedEquipmentViewModel}"
+             d:DataContext="{d:DesignInstance viewModels:SpendedPaddleViewModel}"
              mc:Ignorable="d" Width="920" Height="750">
     <Grid>
         <ContentControl Style="{StaticResource RectangleView}"/>
 
         <Grid  Margin="15,80,15, 15" Width="Auto" Height="Auto">
 
-            <TextBlock Text="PODGLĄD POBRAŃ WYPOSAŻENIA" HorizontalAlignment="Center" VerticalAlignment="Top"  
+            <TextBlock Text="PODGLĄD WYKONANYCH CZYNNOŚCI" HorizontalAlignment="Center" VerticalAlignment="Top"  
                            FontSize="18"  Foreground="Gray" Margin="18"/>
 
             <WrapPanel Margin="10" HorizontalAlignment="Right"  VerticalAlignment="Top">
 
                 <TextBox Margin="5"  Width="150" Height="35"  Foreground="Gray" Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                  materialDesign:HintAssist.Hint="Nazwa" Text="{Binding Name}" />
+                                  materialDesign:HintAssist.Hint="Numer paletki" Text="{Binding BarcodeNumber}" />
                 <Button Margin="5, 5, 5, 0" Background="White" BorderBrush="White" Foreground="Gray" Command="{Binding GetFiltredListCommand}"
                                  Style="{StaticResource MaterialDesignFlatButton}" HorizontalAlignment="Center">
                     <materialDesign:PackIcon Kind="Search" Height="20" Width="20"/>
@@ -26,22 +26,25 @@
             </WrapPanel>
 
             <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Height="520">
-                <DataGrid Margin="10" Background="White" ItemsSource="{Binding RetrievedEquipments}" 
+                <DataGrid Margin="10" Background="White" ItemsSource="{Binding SpendedPaddles}" SelectedItem="{Binding SelectedSpendedPaddle}"
                           AutoGenerateColumns="False" IsReadOnly="True" Height="500" Width="840" FontSize="11">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
-                        <DataGridTextColumn Header="Nazwa" Binding="{Binding Name}"/>
-                        <DataGridTextColumn Header="Pracownik" Binding="{Binding Employee}"/>
-                        <DataGridTextColumn Header="Data" Binding="{Binding Date, StringFormat=yyyy/MM/dd hh:mm:ss}" />
-                        <DataGridTextColumn Header="Czynność" Binding="{Binding Action}"/>
+                        <DataGridTextColumn Header="Numer" Binding="{Binding Paddle.BarcodeNumber}"/>
+                        <DataGridTextColumn Header="Data przyjecia" Binding="{Binding ReceivedDate, StringFormat=yyyy/MM/dd}" />
+                        <DataGridTextColumn Header="Data naprawy" Binding="{Binding RepairDate, StringFormat=yyyy/MM/dd}"/>
+                        <DataGridTextColumn Header="Akcja" Binding="{Binding ActivityPerformed}" />
+                        <DataGridTextColumn Header="Przyjmujący pracownik" Binding="{Binding ReceivingEmployee}"/>
+                        <DataGridTextColumn Header="Wydający pracownik" Binding="{Binding SpendingEmployee}"/>
+                        <DataGridTextColumn Header="Opis interwencji" Binding="{Binding DescriptionIntervention}" Width="250"/>
                     </DataGrid.Columns>
                 </DataGrid>
-
             </Grid>
-
             <WrapPanel VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                <Button Style="{StaticResource MaterialDesignFlatButton}" Height="40" FontSize="14" Margin="10" Width="160" VerticalAlignment="Bottom" 
-                    Foreground="Gray" HorizontalAlignment="Right" Content="POKAŻ WSZYSTKIE" Command="{Binding GetAllCommand}"/>
+                <Button Style="{StaticResource MaterialDesignFlatButton}" Height="40" FontSize="14" Margin="10" Width="160" 
+                    Foreground="Gray"  Content="GENERUJ RAPORT" Command="{Binding ShowDetailsCommand}"/>
+
+                <Button Style="{StaticResource MaterialDesignFlatButton}" Height="40" FontSize="14" Margin="10" Width="160" 
+                    Foreground="Gray"  Content="POKAŻ WSZYSTKIE" Command="{Binding GetAllCommand}"/>
             </WrapPanel>
         </Grid>
     </Grid>
